# tech-challenge-fase-1

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
data/: README.md  municipios_mesorregiao_ibge.csv
docs/: description.md  duvidas-sessao-modelagem.md  plan.md  plano-implementacao-fases-modelagem.md  plano-melhorias-modelagem.md  plano-validacao-grupo-modelagem.md  relatorio-implementacao-modelagem.md
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_modeling.ipynb  04_interpretability.ipynb  utils.py
results/artifacts/: best_model_calibrated.pkl  shap_values_test_2000.npz
results/metrics/: best_model_operational_metrics.json  best_model_test_metrics_default_threshold.csv  best_model_test_metrics_tuned_threshold.csv  experiment_config.json  model_comparison_cv_test.csv  pipeline_baseline_summary.json  pipeline_comparison_smoke.csv  retraining_checklist.json  threshold_search_curve.csv
src/: pipeline.py
